name:                quickcheck-predicates
version:             0.1.0
synopsis:            Standard functions converted into QuickCheck predicates
description:
  This package provides standard functions (from base, containers,
  unordered-containers, etc) converted into QuickCheck predicates. It is
  recommended to use them instead of ordinary functions in your properties
  because then you'll get more informative errors when tests fail.
homepage:            http://github.com/aelve/quickcheck-predicates
bug-reports:         http://github.com/aelve/quickcheck-predicates/issues
license:             BSD3
license-file:        LICENSE
author:              Artyom
maintainer:          yom@artyom.me
-- copyright:           
category:            Testing
tested-with:         GHC == 7.10.3, GHC == 8.0.1, GHC == 8.2.1
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/aelve/quickcheck-predicates.git

library
  exposed-modules:
    Misc.QC
    Data.Either.QC
    Data.Ix.QC
    Data.Maybe.QC
  build-depends:       QuickCheck,
                       base >=4.8 && <5,
                       base-prelude
  ghc-options:         -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      lib
  default-language:    Haskell2010
  default-extensions:
    LambdaCase,
    ScopedTypeVariables
